<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainColor"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.hzr.cloudstation.LoginActivity">

    <Button
        android:id="@+id/btn_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />


    <com.hzr.cloudstation.myView.ClearEditText
        android:id="@+id/et_uName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:myHint="@string/user_name"
        style="@style/LoginET"/>
    <com.hzr.cloudstation.myView.ClearEditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:myHint="@string/password"
        app:myInputType="password"
        style="@style/LoginET"/>




    <Button
        android:id="@+id/btn_login"
        style="@style/loginBtn"
        android:text="@string/login_btn" />



</LinearLayout>
